--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "dev": "webpack -d --watch",
     "build": "webpack -p",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "npm test -- --watch"
+  },
+  "jest": {
+    "setupFiles": ["setup.jest.test.env.js"]
   },
   "author": "Eyal Kenig",
   "license": "MIT",
@@ -26,7 +30,9 @@
     "webpack": "^1.13.2"
   },
   "devDependencies": {
-    "redux-devtools": "^3.3.1",
-    "babel-plugin-react-transform": "^1.1.0"
+    "babel-jest": "^16.0.0",
+    "babel-plugin-react-transform": "^1.1.0",
+    "jest": "^16.0.2",
+    "redux-devtools": "^3.3.1"
   }
 }
