--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-plugin-react-transform": "^1.1.0",
     "enzyme": "^2.5.1",
     "jest": "^16.0.2",
+    "react-addons-test-utils": "^15.3.2",
     "redux-devtools": "^3.3.1"
   }
 }
