--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
+    "material-ui": "^0.16.1",
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.5",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
     "react-router-bootstrap": "^0.23.1",
+    "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.6.0",
     "redux-auth": "0.0.5-beta5",
     "redux-thunk": "^0.1.0",
